add tests for unit-convert-complex element

--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,8 @@
   <body>
     <script>
       WCT.loadSuites([
-        'polymer-unit-convert.html'
+        'polymer-unit-convert.html',
+        'polymer-unit-convert-complex.html'
       ]);
     </script>
   </body>
