--- a/polymer-unit-convert.html
+++ b/polymer-unit-convert.html
@@ -3,11 +3,6 @@
 
 <dom-module id="unit-convert">
   <template>
-    <unit-prefix 
-      from="{{from}}" 
-      value="{{value}}"
-      result="{{normalizedValue}}">
-    </unit-prefix>
   </template>
 </dom-module>
 <script>
@@ -43,7 +38,7 @@
       normalizedValue: {
         type: Number,
         notify: true,
-        value: null
+        readOnly: true
       },
       result: {
         type: Number,
@@ -54,49 +49,35 @@
     ready: function() {
       this.addEventListener('from-changed', this.update);
       this.addEventListener('to-changed', this.update);
-      this.addEventListener('normalized-value-changed', this.update);
+      this.addEventListener('value-changed', this.update);
       this.update();
     },
 
     update: function() {
-
-      if(!areDefined([this.from, this.to, this.normalizedValue])) {
-        this._setResult(null);
-        return;
-      }
-
-      var normalizedResult = this.calculate(),
-          result = this.denormalize(this.to, normalizedResult);
-
-      this._setResult(result);
-
+      this._setResult(this.calculate(this.from, this.to, this.value));
     },
 
-    denormalize: function(unit, value) {
+    calculate: function(from, to, value, bePrecise) {
 
-      var baseUnit = this.getBaseUnit(unit);
-
-      unitPrefixElement.from = baseUnit;
-      unitPrefixElement.to = unit;
-      unitPrefixElement.value = value;
-
-      return unitPrefixElement.result;
-
-    },
-
-    calculate: function(from, to, value) {
-
-      if(value) {
-        //debugger;
+      if(from === to) {
+        return value;
       }
 
       from = from || this.from;
       to = to || this.to;
-      value = value || this.normalizedValue;
+      value = value || this.value;
+      bePrecise = !!bePrecise;
 
       if(areDefined([ from, to, value ])) {
-        var mapping = this.getUnitMapping(from, to);
-        return value * mapping;
+        var normalizedValue = unitPrefixElement.normalize(value, from),
+            mapping = this.getUnitMapping(from, to),
+            result = unitPrefixElement.denormalize(normalizedValue * mapping, to);
+
+        if(!bePrecise) {
+          return parseFloat(result.toPrecision(12));
+        } else {
+          return result;
+        }
       }
 
       return undefined;
@@ -134,11 +115,8 @@
       for(i in unitMap) {
         if(unitMap.hasOwnProperty(i)) {
 
-          console.log(i);
           for(j in unitMap[i]) {
             if(unitMap[i].hasOwnProperty(j)) {
-
-              console.log(i, j);
 
               if((j === fromBaseUnit) && (i === toBaseUnit)) {
                 return 1 / unitMap[i][j];
