--- a/test/polymer-unit-convert.html
+++ b/test/polymer-unit-convert.html
@@ -48,6 +48,17 @@
 
     });
 
+    suite('calculate', function() {
+
+      test('does accept 0 as value', function() {
+
+        el.value = 1;
+        expect(el.calculate('mile', 'meter', 0)).to.be.equal(0);
+
+      });
+
+    });
+
     suite('base unit', function() {
 
       test('matches are detected', function() {
