--- a/test/polymer-unit-convert-complex.html
+++ b/test/polymer-unit-convert-complex.html
@@ -63,14 +63,15 @@
 
       test('are parsed correctly', function() {
 
-        expect(el.from).to.be.equal('kilometer/hour');
-        expect(el.to).to.be.equal('meter/second');
+        var complexUnit;
 
-        expect(el.fromDivisor).to.be.equal('kilometer');
-        expect(el.fromDivident).to.be.equal('hour');
+        complexUnit = el.parseComplexUnit('kilometer/hour');
+        expect(complexUnit[0]).to.be.equal('kilometer');
+        expect(complexUnit[1]).to.be.equal('hour');
 
-        expect(el.toDivisor).to.be.equal('meter');
-        expect(el.toDivident).to.be.equal('second');
+        complexUnit = el.parseComplexUnit('meter/second');
+        expect(complexUnit[0]).to.be.equal('meter');
+        expect(complexUnit[1]).to.be.equal('second');
 
       });
 
@@ -84,7 +85,7 @@
 
       test('meter/second is already normalized', function() {
         el.value = 23;
-        expect(el.normalizedValue).to.be.equal(23);
+        expect(el.result).to.be.equal(23);
       });
 
       test('can be converted to kilometer/second', function() {
@@ -103,8 +104,23 @@
         el.value = 0;
         expect(el.result).to.be.equal(0);
 
-        el.value = 60;
-        expect(el.result).to.be.equal(1);
+        el.value = 1;
+        expect(el.result).to.be.equal(60);
+
+        el.value = 2;
+        expect(el.result).to.be.equal(120);
+
+        el.value = 200;
+        expect(el.result).to.be.equal(12000);
+
+      });
+
+      test('can be converted to kilometer/minute', function() {
+
+        el.to = 'kilometer/minute';
+
+        el.value = 200;
+        expect(el.result).to.be.equal(12);
 
       });
 
@@ -115,8 +131,8 @@
         el.value = 0;
         expect(el.result).to.be.equal(0);
 
-        el.value = 60 * 60;
-        expect(el.result).to.be.equal(1);
+        el.value = 1;
+        expect(el.result).to.be.equal(60 * 60);
 
       });
 
@@ -127,23 +143,20 @@
         el.value = 0;
         expect(el.result).to.be.equal(0);
 
-        el.value = 60;
-        expect(el.result).to.be.equal(1);
+
+        el.value = 200;
+        expect(el.result).to.be.equal(720);
 
       });
 
     });
+
 
     suite('complex unit kilometer/hour', function() {
 
       setup(function() {
         el.from = el.to = 'kilometer/hour';
       }); 
-
-      test('is normalized correctly', function() {
-        el.value = 3.6;
-        expect(el.normalizedValue).to.be.equal(1);
-      });
 
       test('can be converted to meter/second', function() {
 
@@ -161,8 +174,8 @@
         el.value = 0;
         expect(el.result).to.be.equal(0);
 
-        el.value = 3.6 * 60;
-        expect(el.result).to.be.equal(1);
+        el.value = 1;
+        expect(el.result).to.be.equal(100 / 6);
 
       });
 
@@ -173,8 +186,8 @@
         el.value = 0;
         expect(el.result).to.be.equal(0);
 
-        el.value = 3.6 * 60 * 60;
-        expect(el.result).to.be.equal(1);
+        el.value = 1;
+        expect(el.result).to.be.equal(1000);
 
       });
 
