output result in default element template

--- a/polymer-unit-convert-complex.html
+++ b/polymer-unit-convert-complex.html
@@ -1,6 +1,11 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="polymer-unit-convert.html">
 
+<dom-module id="unit-convert-complex">
+  <template>
+    <span>{{result}}</span>
+  </template>
+</dom-module>
 <script>
   Polymer({
 
