--- a/polymer-unit-convert.html
+++ b/polymer-unit-convert.html
@@ -86,6 +86,40 @@
 
     },
 
+    findCommonMapParent: function(fromBaseUnit, toBaseUnit) {
+
+      var i,j;
+
+      var fromParent, toParent;
+
+      for(i in unitMap) {
+        if(unitMap.hasOwnProperty(i)) {
+
+          for(j in unitMap[i]) {
+            if(unitMap[i].hasOwnProperty(j)) {
+
+              if(i === fromBaseUnit || j === fromBaseUnit) {
+                fromParent = i;
+              }
+
+              if(i === toBaseUnit || j === toBaseUnit) {
+                toParent = i;
+              }
+
+            }
+          }
+
+          if(fromParent === toParent) {
+            return fromParent;
+          }
+
+        }
+      }
+
+      return undefined;
+
+    },
+
     getBaseUnit: function(unit) {
       return unitPrefixElement.getBaseUnit(unit);
     },
