--- a/test/polymer-unit-convert.html
+++ b/test/polymer-unit-convert.html
@@ -168,6 +168,165 @@
 
     });
 
+    suite('unit yard', function () {
+
+      setup(function() {
+        el.from = 'yard';
+      }); 
+
+      test('can be converted to meter', function() {
+
+        el.to = 'meter';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        el.value = 1000;
+        expect(el.result).to.be.equal(914.4);
+
+        el.value = -1000;
+        expect(el.result).to.be.equal(-914.4);
+
+      });
+
+      test('can be converted to centimeter', function() {
+
+        el.to = 'centimeter';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        el.value = 10;
+        expect(el.result).to.be.equal(914.4);
+
+        el.value = -10;
+        expect(el.result).to.be.equal(-914.4);
+
+      });
+
+      test('can be converted to mile', function() {
+
+        el.to = 'mile';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        el.value = 1760;
+        expect(el.result).to.be.equal(1);
+
+        el.value = -1760;
+        expect(el.result).to.be.equal(-1);
+
+      });
+
+      test('can be converted to yard', function() {
+
+        el.to = 'yard';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        el.value = 1;
+        expect(el.result).to.be.equal(1);
+
+        el.value = -1;
+        expect(el.result).to.be.equal(-1);
+
+      });
+
+      test('can be converted to nautical_mile', function() {
+
+        el.to = 'nautical_mile';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        var expectedResult = floatPrecision(yardToNauticalMile(1));
+
+        el.value = 1;
+        expect(el.result).to.be.equal(expectedResult);
+
+        el.value = -1;
+        expect(el.result).to.be.equal(-1 * expectedResult);
+
+      });
+
+
+    });
+
+    suite('unit nautical_mile', function () {
+
+      setup(function() {
+        el.from = 'nautical_mile';
+      }); 
+
+      test('can be converted to meter', function() {
+
+        el.to = 'meter';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        el.value = 1;
+        expect(el.result).to.be.equal(1852);
+
+        el.value = -1;
+        expect(el.result).to.be.equal(-1852);
+
+      });
+
+      test('can be converted to centimeter', function() {
+
+        el.to = 'centimeter';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        el.value = 1;
+        expect(el.result).to.be.equal(185200);
+
+        el.value = 0.00001;
+        expect(el.result).to.be.equal(1.852);
+
+      });
+
+      test('can be converted to mile', function() {
+
+        el.to = 'mile';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        var expectedResult = floatPrecision(nauticalMileToMile(1));
+
+        el.value = 1;
+        expect(el.result).to.be.equal(expectedResult);
+
+        el.value = -1;
+        expect(el.result).to.be.equal(-1 * expectedResult);
+
+      });
+
+      test('can be converted to yard', function() {
+
+        el.to = 'yard';
+
+        el.value = 0;
+        expect(el.result).to.be.equal(0);
+
+        var expectedResult = floatPrecision(nauticalMileToYard(1));
+
+        el.value = 1;
+        expect(el.result).to.be.equal(expectedResult);
+
+        el.value = -1;
+        expect(el.result).to.be.equal(-1 * expectedResult);
+
+      });
+
+
+    });
+
     suite('unit minute', function() {
 
       setup(function() {
@@ -345,6 +504,30 @@
 
   function meterToYard(meter) {
     return meter / 0.9144;
+  }
+
+  function yardToMeter(meter) {
+    return meter * 0.9144;
+  }
+
+  function meterToNauticalMile(meter) {
+    return meter / 1852;
+  }
+
+  function yardToNauticalMile(yard) {
+    return meterToNauticalMile(yardToMeter(yard));
+  }
+
+  function nauticalMileToMeter(nmi) {
+    return nmi * 1852;
+  }
+
+  function nauticalMileToYard(nmi) {
+    return meterToYard(nauticalMileToMeter(nmi));
+  }
+
+  function nauticalMileToMile(nmi) {
+    return meterToMile(nauticalMileToMeter(nmi));
   }
 
   </script>
