--- a/polymer-unit-convert.html
+++ b/polymer-unit-convert.html
@@ -8,6 +8,8 @@
 </dom-module>
 <script>
 
+(function() {
+
   var unitMap = {
 
     "meter": {
@@ -229,5 +231,7 @@
   function isDefined (value) {
     return (value !== undefined) && (value !== null);
   }
+
+})();
 
 </script>
