--- a/polymer-unit-convert-complex.html
+++ b/polymer-unit-convert-complex.html
@@ -11,7 +11,8 @@
 (function() {
 
   var abbreviations = {
-    'mph': 'mile/hour'
+    'mph': 'mile/hour',
+    'knots': 'nautical_mile/hour'
   };
 
   Polymer({
@@ -121,7 +122,7 @@
         }).join('/');
 
       }
-      
+
     }
 
   });
