do no print by default

--- a/polymer-unit-convert-complex.html
+++ b/polymer-unit-convert-complex.html
@@ -3,7 +3,7 @@
 
 <dom-module id="unit-convert-complex">
   <template>
-    <span>{{result}}</span>
+    <content></content>
   </template>
 </dom-module>
 <script>
