--- a/polymer-unit-convert.html
+++ b/polymer-unit-convert.html
@@ -3,7 +3,7 @@
 
 <dom-module id="unit-convert">
   <template>
-    <span>{{result}}</span>
+    <content></content>
   </template>
 </dom-module>
 <script>
